2007-06-27  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Preferences.cs, src/Makefile.am,
	  giver.mdp, configure.ac, data/Makefile.am, data/glade,
	  data/glade/giver-prefs.glade, data/glade/Makefile.am: start of
	  preferences

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Defines.cs.in, configure.ac, data/Makefile.am, data/sounds,
	  data/sounds/notify.wav, data/sounds/Makefile.am: Added sounds
	* src/RequestHandler.cs, src/Application.cs: Added notification
	* src/Protocol.cs: Added declined message
	* giver.mdp: Added notify-sharp

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Fixed up the shutdown and photo handling
	* src/RequestHandler.cs: Updated photo requests
	* src/GiverService.cs: Fixed up requesting photos
	* src/Preferences.cs: Added photo prefs
	* src/Application.cs: Fixed up the startup routine and the shutdown

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Uses the photo in the service if available
	* src/ServiceLocator.cs: Added code to get the photo when discovering
	  services
	* src/SendingHandler.cs: Added GetPhoto method
	* src/RequestHandler.cs: Handles requests for photos
	* src/Protocol.cs: ADded a photo headder tag
	* src/Preferences.cs: Added a debug photo
	* src/Application.cs: Added the preference object 

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: updated to use Protocol
	  class and real HTTP headers
	* src/Protocol.cs: Class to hold defines for headers and such
	* src/Preferences.cs: New class to store app prefs
	* src/Makefile.am, giver.mdp: Added new files

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: Sends files
	* src/RequestHandler.cs: Receives files
	* src/GiverService.cs: removed unneeded string
	* src/Application.cs: Added new handlers for new classes
	* src/Makefile.am: new files
	* src/PayloadInfo.cs: no longer needed