@@ -28,6 +28,7 @@
     <File name="./src/Protocol.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Preferences.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/PreferencesDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Defines.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="avahi-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=4d116c78973743f5" />
